gl33-master/src/test/deca/context/valid/others/affectation_boolean_boolean.deca
// Valid test
// Affectation d'un boolean à un autre boolean

{
   boolean x = true;
   boolean y = false;

   x = y;
   y = x;
}
