gl33-master/src/test/deca/context/invalid/other/affectation_void_string.deca
// Invalid test
// Affectation d'un void à un string

{
   String s;
   void v;

   s = v;
}
